--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-icons": "^3.7.0",
     "react-loader-spinner": "^3.1.4",
     "react-scripts": "3.1.2",
+    "react-skycons": "^0.7.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
